--- a/styles/style.css
+++ b/styles/style.css
@@ -86,17 +86,29 @@
     padding: 0 5%;
     background-color: #f8f9fa;
     margin-top: 70px;
+    gap: 20px;
 }
 
 .home-content {
     flex: 1;
     padding-right: 2rem;
+    align-items: center;
+    text-align: end;
 }
 
 .home-content h1 {
     font-size: 3rem;
     margin-bottom: 1rem;
     color: #333;
+    font-weight: 600;
+    
+}
+.home-content h3 {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+    color: #333;
+    font-weight: 400;
+    
 }
 
 .home-content p {
@@ -116,7 +128,7 @@
 }
 
 .cta-button:hover {
-    background-color: #0056b3;
+    background-color: #381ec8;
 }
 
 .home-image {
@@ -193,6 +205,7 @@
 .products {
     padding: 4rem 5%;
     background-color: #f8f9fa;
+    margin: 0;
 }
 
 .section-title {
@@ -339,8 +352,6 @@
 .add-to-cart {
     width: 100%;
     padding: 0.8rem;
-    background-color: #007bff;
-    color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -605,8 +616,9 @@
 
 .about-content h2 {
     font-size: 2.5rem;
-    color: #333;
+    color: #e05284;
     margin-bottom: 1rem;
+    
 }
 
 .subtitle {
@@ -646,7 +658,7 @@
 }
 
 .feature-icon {
-    font-size: 2rem;
+    font-size: 1rem;
     margin-bottom: 0.5rem;
 }
 
@@ -665,8 +677,8 @@
 .stats-container {
     display: flex;
     justify-content: space-between;
-    margin: 2rem 0;
-    padding: 2rem 0;
+    margin: 1rem 0;
+    padding: 1rem 0;
     border-top: 1px solid #eee;
     border-bottom: 1px solid #eee;
 }
@@ -679,7 +691,7 @@
     display: block;
     font-size: 2rem;
     font-weight: bold;
-    color: #007bff;
+    color: #e05284;
     margin-bottom: 0.5rem;
 }
 
@@ -690,9 +702,9 @@
 
 /* Button Styles */
 .learn-more {
-    display: inline-block;
+    display: inline-flex;
     padding: 1rem 2rem;
-    background-color: #007bff;
+    background-color: #e05284;
     color: white;
     text-decoration: none;
     border-radius: 5px;
@@ -715,10 +727,10 @@
     }
 
     .experience-badge {
-        bottom: -20px;
-        right: -20px;
-        width: 100px;
-        height: 100px;
+        bottom: 10px;
+        right: 10px;
+        width: 150px;
+        height: 150px;
     }
 }
 
